--- a/package.json
+++ b/package.json
@@ -6,17 +6,31 @@
     "author": "Nekomaru@pku.edu.cn",
     "license": "GPL-3.0-or-later",
     "repository": "github:Nekomaru-PKU/MAE-Frontend",
+    "scripts": {
+        "start": "ts-node .",
+        "build": "webpack",
+        "watch": "webpack -w",
+        "watch:tsc": "tsc --watch"
+    },
     "devDependencies": {
         "@emotion/react": "^11.9.0",
         "@emotion/styled": "^11.8.1",
         "@mui/material": "^5.8.1",
+        "@types/express": "^4.17.13",
+        "@types/fs-extra": "^9.0.13",
+        "@types/multer": "^1.4.7",
         "@types/react": "^18.0.9",
         "@types/react-dom": "^18.0.5",
+        "@types/uuid": "^8.3.4",
+        "express": "^4.18.1",
+        "fs-extra": "^10.1.0",
+        "multer": "^1.4.4",
         "react": "^18.1.0",
         "react-dom": "^18.1.0",
         "ts-loader": "^9.3.0",
         "ts-node": "^10.8.0",
         "typescript": "^4.6.4",
+        "uuid": "^8.3.2",
         "webpack": "^5.72.0",
         "webpack-cli": "^4.9.2",
         "webpack-dev-server": "^4.9.0"
