--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@types/react": "^18.0.9",
         "@types/react-dom": "^18.0.5",
         "@types/uuid": "^8.3.4",
+        "buffer": "^6.0.3",
         "express": "^4.18.1",
         "fs-extra": "^10.1.0",
         "multer": "^1.4.4",
